--- a/src/Components/Header/Header.module.css
+++ b/src/Components/Header/Header.module.css
@@ -9,6 +9,45 @@
 .logo {
     margin-left: 17px;
 }
+@media screen and (min-width: 1024px) {
+    .logo {
+    margin-left: 60px;
+    padding: 17px 0;
+    }
+}
+
 .menu {
     margin-right: 17px;
+}
+
+@media screen and (min-width: 1024px) {
+    .menu {
+    display: none;
+    }
+}
+
+@media screen and (max-width: 1023.98px) {
+    .nav {
+    display: none;
+    }
+}
+
+.nav {
+    font-size: 16px;
+    line-height: 1.6;
+    margin-right: 60px;
+}
+
+.navList {
+    display: inline-flex;
+}
+
+.navListItem {
+    margin-left: 30px;
+    padding: 17px 0;
+    font-size: 16px;
+}
+
+a {
+    color: rgba(0, 0, 0, 0.87);
 }
