--- a/src/Components/Modal/Modal.module.css
+++ b/src/Components/Modal/Modal.module.css
@@ -26,13 +26,20 @@
     border-radius: 4px;
     box-shadow: 0px 2px 1px -1px rgba(0, 0, 0, 0.2),
         0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
-    opacity: 0;
+    opacity: 1;
     pointer-events: none;
     transition: 0.5s;
 }
 .Modal.active {
-    opacity: 1;
+    opacity: 0;
     pointer-events: all;
+}
+
+@media screen and (min-width: 768px){
+    .Modal{
+    width: 452px;
+    height: 194px;
+    }
 }
 
 .title {
@@ -60,6 +67,7 @@
     position: fixed;
     bottom: 24px;
     right: 24px;
+    cursor: pointer;
 }
 
 .content {
